@@ -52,8 +52,10 @@ asort_by_key($items, 'sortorder');
 $dbItems = API::Item()->get(array(
 	'webitems' => true,
 	'itemids' => zbx_objectValues($items, 'itemid'),
-	'nodeids' => get_current_nodeid(true)
+	'nodeids' => get_current_nodeid(true),
+	'filter' => array('flags' => null)
 ));
+
 $dbItems = zbx_toHash($dbItems, 'itemid');
 foreach ($items as $item) {
 	if (!isset($dbItems[$item['itemid']])) {
