@@ -149,7 +149,7 @@ if (get_request('parent_discoveryid', false)) {
 
 	if (isset($_REQUEST['itemid'])) {
 		$itemPrototype = API::ItemPrototype()->get(array(
-			'triggerids' => $_REQUEST['itemid'],
+			'itemids' => $_REQUEST['itemid'],
 			'output' => API_OUTPUT_SHORTEN,
 			'editable' => true,
 			'preservekeys' => true
